--- a/UI/QT_Engine.ui
+++ b/UI/QT_Engine.ui
@@ -74,7 +74,7 @@
   <widget class="QComboBox" name="camera_selector">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>500</x>
      <y>70</y>
      <width>131</width>
      <height>26</height>
@@ -94,7 +94,7 @@
   <widget class="QLabel" name="device_label">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>400</x>
      <y>70</y>
      <width>60</width>
      <height>21</height>
@@ -107,14 +107,14 @@
   <widget class="QLabel" name="duration_label">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>400</x>
      <y>110</y>
-     <width>60</width>
+     <width>91</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>Duration</string>
+    <string>Video Duration</string>
    </property>
   </widget>
   <widget class="QLabel" name="output_title">
@@ -154,7 +154,7 @@
   <widget class="QLineEdit" name="duration_input">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>500</x>
      <y>110</y>
      <width>61</width>
      <height>21</height>
@@ -170,7 +170,7 @@
   <widget class="QComboBox" name="duration_time_selector">
    <property name="geometry">
     <rect>
-     <x>560</x>
+     <x>570</x>
      <y>109</y>
      <width>61</width>
      <height>26</height>
@@ -198,7 +198,7 @@
   <widget class="QLineEdit" name="print_time_input">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>500</x>
      <y>150</y>
      <width>61</width>
      <height>21</height>
@@ -214,7 +214,7 @@
   <widget class="QComboBox" name="print_time_selector">
    <property name="geometry">
     <rect>
-     <x>560</x>
+     <x>570</x>
      <y>149</y>
      <width>61</width>
      <height>26</height>
@@ -239,7 +239,7 @@
   <widget class="QLabel" name="print_time_label">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>400</x>
      <y>150</y>
      <width>71</width>
      <height>21</height>
@@ -291,7 +291,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>/media/folder/app</string>
+    <string>/Users/ingenieria1/Documents/Code/SlowRecorder</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -313,22 +313,22 @@
   <widget class="QPushButton" name="start_button">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>390</x>
      <y>210</y>
-     <width>113</width>
+     <width>121</width>
      <height>32</height>
     </rect>
    </property>
    <property name="text">
-    <string>Start</string>
+    <string>Start Record</string>
    </property>
   </widget>
   <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
-     <x>520</x>
+     <x>512</x>
      <y>210</y>
-     <width>113</width>
+     <width>121</width>
      <height>32</height>
     </rect>
    </property>
@@ -336,7 +336,7 @@
     <string>Cancel</string>
    </property>
   </widget>
-  <widget class="QProgressBar" name="progressBar">
+  <widget class="QProgressBar" name="progress_bar">
    <property name="geometry">
     <rect>
      <x>60</x>
@@ -349,7 +349,7 @@
     <number>24</number>
    </property>
   </widget>
-  <widget class="QLabel" name="output_folder_label_2">
+  <widget class="QLabel" name="progress_label">
    <property name="geometry">
     <rect>
      <x>240</x>
@@ -368,7 +368,7 @@
   <widget class="QPushButton" name="watch_button">
    <property name="geometry">
     <rect>
-     <x>462</x>
+     <x>450</x>
      <y>250</y>
      <width>121</width>
      <height>32</height>
