--- a/UI/QT_Engine.ui
+++ b/UI/QT_Engine.ui
@@ -160,8 +160,14 @@
      <height>21</height>
     </rect>
    </property>
+   <property name="inputMethodHints">
+    <set>Qt::ImhDigitsOnly</set>
+   </property>
    <property name="text">
-    <string>15</string>
+    <string>30</string>
+   </property>
+   <property name="maxLength">
+    <number>100</number>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -205,7 +211,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>6</string>
+    <string>1</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -222,17 +228,17 @@
    </property>
    <item>
     <property name="text">
-     <string>h</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
      <string>m</string>
     </property>
    </item>
    <item>
     <property name="text">
      <string>s</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>h</string>
     </property>
    </item>
   </widget>
@@ -331,6 +337,9 @@
      <width>121</width>
      <height>32</height>
     </rect>
+   </property>
+   <property name="inputMethodHints">
+    <set>Qt::ImhDigitsOnly</set>
    </property>
    <property name="text">
     <string>Cancel</string>
